<resources>
    <string name="app_name">Dotify</string>
    <string name="change_user">Change User</string>
    <string name="apply">Apply</string>
    <string name="username">Iron Man</string>
    <string name="album_cover">album cover</string>
    <string name="song_name">明月天涯</string>
    <string name="number_plays">number plays</string>
    <string name="singer_name">五音JW</string>
    <string name="skip_to_previous">Previous</string>
    <string name="play">Play</string>
    <string name="skip_to_next">Next</string>
    <string name="play_messages">%1$d plays</string>
    <string name="all_songs">All Songs</string>
    <string name="shuffle">Shuffle</string>
    <string name="ivSong_description">image of the song</string>
    <string name="username_hint">enter the user name</string>
    <string name="selected_info">%1$s - %2$s</string>
</resources>
