<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/overall_padding"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvUserName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/username"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1" />

        <EditText
            android:id="@+id/etUserName"
            android:layout_width="@dimen/zero_dp"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:autofillHints="Enter username" />

        <Button
            android:id="@+id/btnChangeUser"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/change_user" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <ImageView
        android:id="@+id/ivAlbumCover"
        android:layout_width="match_parent"
        android:layout_height="350dp"
        android:scaleType="centerCrop"
        android:src="@drawable/mingyuetianya_cover"
        android:foreground="?selectableItemBackground"
        android:contentDescription="@string/album_cover" />

    <TextView
        android:id="@+id/tvSongName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/song_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/tvSinger"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ellipsize="end"
        android:maxLines="1"
        android:text="@string/singer_name"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/darkBlue" />

    <TextView
        android:id="@+id/tvPlaysNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/number_plays"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
        android:textColor="@color/darkPurple" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageButton
            android:id="@+id/btnPrevious"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/skip_to_previous"
            android:foreground="?selectableItemBackground"
            android:src="@drawable/ic_previous" />

        <ImageButton
            android:id="@+id/btnPlay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/play"
            android:foreground="?selectableItemBackground"
            android:src="@drawable/ic_play" />

        <ImageButton
            android:id="@+id/btnNext"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@android:color/transparent"
            android:contentDescription="@string/skip_to_next"
            android:foreground="?selectableItemBackground"
            android:src="@drawable/ic_next" />
    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>